# sibsutis_server_programming

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/routers/: auth.py  orders.py  products.py
app/schemas/: order.py  product.py  user.py
app/utils/: auth.py  password.py
